# StereoSync

./: README.md
spinnaker_camera_driver/cfg/: Spinnaker.cfg
spinnaker_camera_driver/launch/: camera.launch  diagnostics.launch  stereo.launch
spinnaker_camera_driver/src/: SpinnakerCamera.cpp  camera.cpp  cm3.cpp  gh3.cpp  node.cpp  nodelet.cpp
sync_cal/: package.xml
sync_cal/include/sync_cal/: viz.hpp
sync_cal/launch/: stereo_sync.launch
sync_cal/src/: main.cpp  viz.cpp
